--- a/views/about.hbs
+++ b/views/about.hbs
@@ -1,3 +1,6 @@
+{{> navbar}}
 <h1>{{title}}</h1>
 <p>About page content with code snippet:</p>
+<h1>Code</h1>
+{{code}}
 <pre><code>{{code}}</code></pre>
