--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,3 +1,6 @@
+<head>
+    <link rel="stylesheet" href="../../public/styles.css"/>
+</head>
 {{> navbar}}
 <h1>{{title}}</h1>
 <p>Here is a code snippet:</p>
