--- a/views/partials/_navbar.hbs
+++ b/views/partials/_navbar.hbs
@@ -1,3 +1,6 @@
+<head>
+    <link rel="stylesheet" href="../../public/styles.css"/>
+</head>
 <nav>
     <ul>
         <li><a href="/">Home</a></li>
